prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: prometheus
    port: 9090
    protocol: TCP
    targetPort: prometheus
  selector:
    app: prometheus
